333 ==> 437682 - Strange activity - If a year (2007) with date subdirectories is selected from the Album.
334 ==> 437708 - Face tag spanning entire image added for photos taken with Windows Phone.
335 ==> 437750 - digiKam causes 20 exiftool (32) .exe to run in the Task Manager panel at the end of the day W10.
336 ==> 437714 - A search group of this or another search is added to existing searches when editing them.
337 ==> 437769 - Search-Table view / After suspending - ERROR:directory_reader_win.cc(43).
338 ==> 437813 - Exiftool.exe is preventing the installation.
339 ==> 437657 - Size of dialog for database migration.
340 ==> 437897 - Windows timestamp to metadata extraction for TIFFs changes when modifying files.
341 ==> 397999 - Sort thumbs by date. causes issues.
342 ==> 437736 - digiKam 7.3 doesn't have a Translators tab in its About dialogue anymore.
343 ==> 438093 - digiKam po file no longer has any information about translators.
344 ==> 438120 - Geolocation data not being saved.
345 ==> 438134 - Unexpected behaviour of face overlay in preview window.
346 ==> 438248 - W10 Sysinternals Process Monitor digikam Cannot create files digikam4.db-journal; digikam4.db-wal.
347 ==> 428964 - Crash updating fingerprints before checking similarities.
348 ==> 427337 - Crash when rebuilding thumbnails or fingerprints.
349 ==> 438465 - Question to Color Spaces.
350 ==> 438344 - Questions to Add Border Tool.
351 ==> 438466 - Image editor - Color Negative closes application.
352 ==> 432650 - MacOS: digikam system menu not localizable.
353 ==> 437606 - Freenode IRC has been taken over; advise to move the channel to libera.chat or oftc.
354 ==> 354600 - Changing background colour after Free Rotation.
355 ==> 438855 - ShowFoto - DNG-Converter I.
356 ==> 438856 - ShowFoto - DNG-Converter II.
357 ==> 438878 - Ambiguous Shortcut window on startup.
358 ==> 438888 - Exiftool - non ASCII characters.
359 ==> 