@@ -574,10 +574,6 @@ public:
     void setValueWidgetsVisible(bool visible) override;
     QList<QRect> valueWidgetRects() const override;
 
-protected Q_SLOTS:
-
-    void slotIndexChanged(int);
-
 protected:
 
     QLabel*    m_dayLabel;
