@@ -379,4 +379,5 @@ BUGFIXES:
 356 ==> 438856 - ShowFoto - DNG-Converter II.
 357 ==> 438878 - Ambiguous Shortcut window on startup.
 358 ==> 438888 - Exiftool - non ASCII characters.
-359 ==> 
+359 ==> 438961 - Searching images created on a given day of every month is not possible.
+360 ==> 
